[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-angle"
version = "0.1.1"
description = "Redistributable ANGLE libraries"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Comfy-Org/comfy-angle"

[tool.setuptools.packages.find]
include = ["comfy_angle*"]

[tool.setuptools.package-data]
comfy_angle = ["libs/*", "electron-LICENSE", "LICENSES.chromium.html"]
